--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,11 +17,54 @@ response.confirmation.delete.zone=The deletion is done successfully. Please chec
 response.error.delete.zone=An error occurred while deleting the register. Please try again later.
 ###########################################################################################################################
 
-################################################## Administrator  ####################################################################
+################################################## Poultry House  ################################################################
+
 #--------------------------------------------------- Poultry House ---------------------------------------------------
+#Creation
 response.confirmation.creation.poultryhouse=The poultry house has been created successfully. Please check your email for confirmation.
 response.error.creation.poultryhouse=An error occurred while creating the poultry house. Please try again later.
+#No found
 response.no.poultryhouses.found=No poultry houses found.
+#
 response.error.fetching.poultryhouses=An error occurred while fetching poultry houses. Please try again later.
 response.error.fetching.poultryhouse=An error occurred while fetching the poultry house. Please try again later.
 #---------------------------------------------------  ---------------------------------------------------
+
+
+################################################### Mortarlity ###################################################################
+#--------------------------------------------------- Mortarlity ---------------------------------------------------
+mortality.created=The mortality record has been created successfully.
+mortality.creation.error=An error occurred while creating the mortality record. Please try again later.
+mortality.not.found=The mortality record you are trying to access does not exist. Please check the ID and try again.
+mortality.deletion.error=An error occurred while deleting the mortality record. Please try again later.
+mortality.deleted=The mortality record has been deleted successfully.
+
+################################################ Avereage Weight ########################################################
+#--------------------------------------------------- Avereage Weight ---------------------------------------------------
+#Create average weight
+average.weight.created=The average weight record has been created successfully.
+average.weight.creation.error=An error occurred while creating the average weight record. Please try again later.
+#Update average weight
+average.weight.updated=The average weight record has been updated successfully.
+average.weight.update.error=An error occurred while updating the average weight record. Please try again later.
+#Delete average weight
+average.weight.deleted=The average weight record has been deleted successfully.
+average.weight.deletion.error=An error occurred while deleting the average weight record. Please try again later.
+#No found average weight
+average.weight.not.found=The average weight record you are trying to access does not exist. Please check the ID and try again.
+#Find average weight
+average.weight.found=The average weight record has been found successfully.
+
+##################################################     Flock ####################################################################
+#----------------------------------------------- Flock -----------------------------------------------------------------------
+flock.not.found=The flock no found. try again.
+flock.found=The Flcok record has been found successfully.
+#Create
+flock.created=The Flock record has been created successfu1lly.
+flock.creation.error=An error occurred while creating the Flock record. Please try again later.
+#Update
+flock.updated=The Flock record has been updated successfully.
+flock.update.error= An error occurred while updating the Flock record. Please try again later.
+#Delete
+flock.deleted= The flock record has been deleted successfully.
+flock.deletion.error= An error occurred while delete the flock record. Please try again later
